# nonlinearsolver

./: .gitignore  CMakeLists.txt  README.md
codes/: Aitken.cpp  Aitken.h  Bisection.cpp  Bisection.h  CMakeLists.txt  Chord.cpp  Chord.h  DivZero.cpp  DivZero.h  Equation_Solver.cpp  Equation_Solver.h  Exceptions.cpp  Exceptions.h  Interval.cpp  Interval.h  Mama_Solver.cpp  Mama_Solver.h  NR.cpp  NR.h  Newton.cpp  Newton.h  test_NR.cpp  test_aitken.cpp  test_bisection.cpp  test_chord.cpp  test_functions.cpp
doxygen-output/html/: _bisection_8cpp.html  _bisection_8h.html  _bisection_8h_source.html  _chord_8h.html  _chord_8h_source.html  _equation___solver_8cpp.html  _n_r_8h.html  _newton_8cpp.html  _newton_8h.html  _newton_8h_source.html  _newton___system_8h_source.html  _system___solver_8cpp.html  _system___solver_8h.html  _system___solver_8h_source.html  class_aitken-members.html  class_mama___solver-members.html  class_mama___solver.html  class_n_r.html  class_newton-members.html  class_newton.html  class_newton___system-members.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions_vars.html  globals.html  pcsc_8h.html  pcsc_8h_source.html
doxygen-output/latex/: _aitken_8cpp.tex  _aitken_8h.tex  _bisection_8h_source.tex  _equation___solver_8cpp.tex  _equation___solver_8h.tex  _mama___solver_8h_source.tex  _n_r_8cpp.tex  _n_r_8h.tex  _newton_8cpp.tex  _newton_8h_source.tex  _newton___system_8h_source.tex  _system___solver_8cpp.tex  _system___solver_8h_source.tex  annotated.tex  class_aitken.tex  class_bisection.eps  class_equation___solver.eps  class_mama___solver.tex  class_n_r.eps  class_n_r.tex  class_newton.eps  class_newton___system.eps  class_newton___system.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  hierarchy.tex  main_8cpp.tex  pcsc_8cpp.tex  pcsc_8h_source.tex  refman.tex
doxygen_output/html/: _bisection_8cpp.html  _bisection_8h.html  _bisection_8h_source.html  _chord_8cpp.html  _chord_8h.html  _chord_8h_source.html  _complex___solver_8cpp.html  _complex___solver_8h.html  _complex___solver_8h_source.html  _equation___solver_8cpp.html  _equation___solver_8h.html  _equation___solver_8h_source.html  _hirano_8cpp.html  _hirano_8h.html  _hirano_8h_source.html  _mama___solver_8cpp.html  _mama___solver_8h.html  _mama___solver_8h_source.html  _n_r_8cpp.html  _n_r_8h.html  _n_r_8h_source.html  _newton_8cpp.html  _newton_8h.html  _newton_8h_source.html  _newton___system_8cpp.html  _newton___system_8h.html  _newton___system_8h_source.html  _system___solver_8cpp.html  _system___solver_8h.html  _system___solver_8h_source.html  annotated.html  class_bisection-members.html  class_bisection.html  class_chord-members.html  class_chord.html  class_complex___solver-members.html  class_complex___solver.html  class_equation___solver-members.html  class_equation___solver.html  class_hirano-members.html  (+30 more)
doxygen_output/html_exceptions/: _div_zero_8cpp.html  _div_zero_8h.html  _div_zero_8h_source.html  _exceptions_8cpp.html  _exceptions_8h.html  _exceptions_8h_source.html  _interval_8cpp.html  _interval_8h.html  _interval_8h_source.html  _max_iter_8cpp.html  _max_iter_8h.html  _max_iter_8h_source.html  _wrong_dim_8cpp.html  _wrong_dim_8h.html  _wrong_dim_8h_source.html  annotated.html  class_div_zero-members.html  class_div_zero.html  class_exceptions-members.html  class_exceptions.html  class_interval-members.html  class_interval.html  class_max_iter-members.html  class_max_iter.html  class_wrong_dim-members.html  class_wrong_dim.html  dir_663bfedb1a7f0bcd2f28c25e01a1b0cb.html  dir_668151966c7ba410dd1d1a6c1eacf1db.html  dir_77e7ba78de35824b7130eb36e99ab4f7.html  dir_94497d337f38c0d8f99898cc3ed6e669.html  dir_a8ff57db3af98f3b4eb753490805dccb.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  (+1 more)
eigen-library/: CMakeLists.txt  main.cc
src/: Bisection.cpp  Bisection.h  Chord.cpp  Chord.h  Complex_Solver.cpp  Complex_Solver.h  Equation_Solver.cpp  Equation_Solver.h  Exceptions.cpp  Exceptions.h  Hirano.cpp  Hirano.h  Mama_Solver.cpp  Mama_Solver.h  NR.cpp  NR.h  Newton.cpp  Newton.h  Newton_System.cpp  Newton_System.h  System_Solver.cpp  System_Solver.h  main.cpp  pcsc.cpp  pcsc.h  test_bisection.cpp  user_interface.cpp
test/: test.cpp  test_NR.cpp  test_bisection.cpp  test_chord.cpp  test_functions.cpp  test_functions.h  test_hirano.cpp  test_newton_system.cpp
tests/: CMakeLists.txt  test_bisection.cpp
(+202 files in other folders)
